# dodo

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  USAGE.md  install.sh  test_ux.sh
.cargo/: audit.toml
.github/workflows/: ci.yml  pages.yml  release.yml
memory/: MEMORY.md  ROADMAP.md  UI_UX_PLAN.md
src/: backup.rs  cli.rs  config.rs  db.rs  email.rs  fuzzy.rs  lib.rs  main.rs  notation.rs  session.rs  task.rs  tui.rs  update.rs
src/tui/: constants.rs  draw.rs  event.rs  format.rs  mod.rs  state.rs  tests.rs
tests/: config_test.rs  fuzzy_test.rs  notation_test.rs  workflow_test.rs
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css
web/src/components/: ConnectionForm.tsx  Layout.tsx  TaskTable.tsx
web/src/lib/: auth.ts  turso.ts
