[package]
name = "dodo"
version = "0.1.0"
edition = "2021"
authors = ["Hyunwoo Park <oksure@gmail.com>"]
description = "Keyboard-first todo + time tracker CLI"
license = "MIT"
repository = "https://github.com/oksure/dodo"

[lib]
name = "dodo"
path = "src/lib.rs"

[[bin]]
name = "dodo"
path = "src/main.rs"

[dependencies]
# Error handling
anyhow = "1.0"

# CLI parsing
clap = { version = "4.5", features = ["derive"] }

# Database
rusqlite = { version = "0.38", features = ["bundled", "chrono", "uuid"] }

# TUI
ratatui = "0.30"
crossterm = "0.29"

# Fuzzy matching
nucleo-matcher = "0.3"

# ULID IDs
ulid = { version = "1.1", features = ["uuid"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Configuration
serde = { version = "1.0", features = ["derive"] }
toml = "1.0"
dirs = "6.0"

# HTTP (for sync/MCP)
reqwest = { version = "0.12", features = ["json"], optional = true }
tokio = { version = "1.40", features = ["full"], optional = true }

# AWS SDK for R2
aws-config = { version = "1.5", optional = true }
aws-sdk-s3 = { version = "1.47", optional = true }

[features]
default = []
sync = ["reqwest", "tokio", "aws-config", "aws-sdk-s3"]

[dev-dependencies]
tempfile = "3.12"
