[package]
name = "dodo"
version = "0.1.0"
edition = "2021"
authors = ["Hyunwoo Park <oksure@gmail.com>"]
description = "Keyboard-first todo + time tracker CLI"
license = "MIT"
repository = "https://github.com/oksure/dodo"

[lib]
name = "dodo"
path = "src/lib.rs"

[[bin]]
name = "dodo"
path = "src/main.rs"

[dependencies]
# Error handling
anyhow = "1.0"

# CLI parsing
clap = { version = "4.5", features = ["derive"] }

# Database (libsql — SQLite-compatible, supports Turso sync)
libsql = "0.9"

# Async runtime (required by libsql)
tokio = { version = "1.40", features = ["rt", "macros"] }

# TUI
ratatui = "0.30"
crossterm = "0.29"

# Fuzzy matching
nucleo-matcher = "0.3"

# ULID IDs
ulid = { version = "1.1", features = ["uuid"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"

# Configuration
serde = { version = "1.0", features = ["derive"] }
toml = "1.0"
dirs = "6.0"

# CLI colors
colored = "3"

# AWS SDK for S3-compatible backup
aws-config = "1.5"
aws-sdk-s3 = "1.47"

# Compression for backups
flate2 = "1.0"

# Archive extraction for self-update
tar = "0.4"

# HTTP client for Resend email API
ureq = "3"

# JSON serialization
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.12"
